src/test/ui/parser/duplicate-visibility.stderr
error: expected one of `(`, `async`, `const`, `default`, `extern`, `fn`, `pub`, `unsafe`, or `use`, found keyword `pub`
  --> $DIR/duplicate-visibility.rs:6:9
   |
LL | extern "C" {
   |            - while parsing this item list starting here
LL |     pub pub fn foo();
   |         ^^^
   |         |
   |         expected one of 9 possible tokens
   |         help: visibility `pub` must come before `pub pub`: `pub pub pub`
LL |
LL | }
   | - the item list ends here

error: aborting due to previous error

